Added chatbot and collaboration trip feature